--- a/index.html
+++ b/index.html
@@ -3,11 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>lista de tarefas</title>
 </head>
 <body>
     <header>
-        <h1>Exemplo</h1>
+        <h1>Lista de tarefas</h1>
+        <nav>
+            <a href="home.html"></a>
+            <a href="sobre.html"></a>
+        </nav>
     </header>
+    <ul>
+        <li>Tarefa 1</li>
+    </ul>
+    
 </body>
 </html>
